--- a/assets/languages/json/Translations.json
+++ b/assets/languages/json/Translations.json
@@ -1,12 +1,38 @@
 ﻿{
 	"en": {
-		"langcode": "en",
-		"Hello": "Hello World!",
-		"Yes": "Yes"
+		"Translator": "Marvin Borner",
+		"you": "you",
+		"Feed": "New",
+		"Explore": "Explore",
+		"Chat": "Chat",
+		"Friends": "Friends",
+		"Personal": "Personal",
+		"joined the group": "joined the group",
+		"You joined the group": "You joined the group",
+		"has disconnected from the server": "has disconnected from the server"
+	},
+	"de": {
+		"Translator": "Marvin Borner",
+		"you": "du",
+		"Feed": "Neues",
+		"Explore": "Entdecken",
+		"Chat": "Nachrichten",
+		"Friends": "Freunde",
+		"Personal": "Persönliche Daten",
+		"joined the group": "ist der Gruppe beigetreten",
+		"You joined the group": "Du bist der Gruppe beigetreten",
+		"has disconnected from the server": "hat sich vom Server getrennt"
 	},
 	"fr": {
-		"langcode": "fr",
-		"Hello": "Bonjour à tous!",
-		"Yes": "Oui"
+		"Translator": "Marvin Borner (non-french)",
+		"you": "vous",
+		"Feed": "D'actualités",
+		"Explore": "Dépister",
+		"Chat": "Message",
+		"Friends": "Camarades",
+		"Personal": "Personnelles",
+		"joined the group": "s'est joint au groupe",
+		"You joined the group": "Vous avez rejoint le groupe",
+		"has disconnected from the server": "s'est déconnecté du serveur."
 	}
 }
